change the name of machine to device
