# docs/swagger.yaml
@@ -1,16 +1,16 @@
 definitions:
+  main.DeviceListOutputModel:
+    properties:
+      deviceId:
+        type: integer
+      deviceName:
+        type: string
+    type: object
   main.InputParameter:
     properties:
       parameterName:
         type: string
       parameterValue:
-        type: string
-    type: object
-  main.MachineListOutputModel:
-    properties:
-      machineId:
-        type: integer
-      machineName:
         type: string
     type: object
   main.MaximumErrorRate:
@@ -24,7 +24,7 @@ definitions:
     properties:
       parameterCodeValue:
         type: string
-      parameterMachineValue:
+      parameterDeviceValue:
         type: string
       parameterName:
         type: string
@@ -46,12 +46,12 @@ definitions:
         items:
           $ref: '#/definitions/main.TaskLog'
         type: array
+      deviceId:
+        type: integer
+      deviceName:
+        type: string
       isActive:
         type: boolean
-      machineId:
-        type: integer
-      machineName:
-        type: string
       maximumErrorRates:
         items:
           $ref: '#/definitions/main.MaximumErrorRate'
@@ -82,12 +82,12 @@ definitions:
     properties:
       createdAt:
         type: string
+      deviceId:
+        type: integer
+      deviceName:
+        type: string
       isActive:
         type: boolean
-      machineId:
-        type: integer
-      machineName:
-        type: string
       pluginOperatingHours:
         type: number
       taskId:
@@ -100,11 +100,11 @@ info:
   title: DigitalTwin API
   version: "1.0"
 paths:
-  /api/v1/machines:
+  /api/v1/devices:
     get:
       consumes:
       - application/json
-      description: Returns all machines
+      description: Returns all devices
       produces:
       - application/json
       responses:
@@ -112,22 +112,22 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/main.MachineListOutputModel'
+              $ref: '#/definitions/main.DeviceListOutputModel'
             type: array
       security:
       - BearerAuth: []
-      summary: Returns all machines
+      summary: Returns all devices
       tags:
-      - machines
-  /api/v1/machines/getMachineParameters/{machine_id}:
+      - devices
+  /api/v1/devices/getDeviceParameters/{device_id}:
     get:
       consumes:
       - application/json
-      description: returns machine parameters
+      description: returns device parameters
       parameters:
-      - description: machine ID
+      - description: device ID
         in: path
-        name: machine_id
+        name: device_id
         required: true
         type: integer
       produces:
@@ -141,9 +141,9 @@ paths:
             type: array
       security:
       - BearerAuth: []
-      summary: returns machine parameters
+      summary: returns device parameters
       tags:
-      - machines
+      - devices
   /api/v1/tasks/GetTaskDetail/{task_id}:
     get:
       consumes:
@@ -183,9 +183,9 @@ paths:
         name: taskName
         required: true
         type: string
-      - description: ID of the machine
+      - description: ID of the device
         in: formData
-        name: machineId
+        name: deviceId
         required: true
         type: integer
       - description: interval time in minutes
